--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase-functions": "^7.0.5",
     "lucide-react": "^0.572.0",
     "next": "16.1.6",
+    "node-domexception": "^2.0.2",
     "radix-ui": "^1.4.3",
     "react": "19.2.3",
     "react-device-detect": "^2.2.3",
