--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.9.0",
-    "firebase-functions": "^7.0.5",
     "lucide-react": "^0.572.0",
     "next": "16.1.6",
     "node-domexception": "^2.0.2",
@@ -23,6 +22,9 @@
     "uuid": "^13.0.0",
     "vaul": "^1.1.2",
     "zustand": "^5.0.11"
+  },
+  "engines": {
+    "node": ">=22.9.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
